[package]
name = "bullshark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
rand = "0.7.3"
futures = "0.3.15"

turmoil = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"

config = { git = "https://github.com/asonnino/narwhal/" }
store = { git = "https://github.com/asonnino/narwhal/" }
crypto = { git = "https://github.com/asonnino/narwhal/" }
primary = { git = "https://github.com/asonnino/narwhal/" }
worker = { git = "https://github.com/asonnino/narwhal/" }
consensus = { git = "https://github.com/asonnino/narwhal/" }
toml = "0.8.8"
